[project]
name = "devpail_test_flask"
version = "0.1.0"
description = "A test of building a flask app with DevPail"
license = "MIT"
python = "^3.8"
homepage = "https://github.com/tdesposito/DevPail"

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
